# parallax

./: .gitignore  README.md
app/: .gitignore  NATIVEWIND_FIXED.md  NATIVEWIND_SETUP.md  README.md  SETUP_COMPLETE.md  V0_COMPONENTS_INTEGRATED.md  app.json  package-lock.json  package.json  tailwind.config.js
app/app/: _layout.tsx  about.tsx  history.tsx  index.tsx
app/app/results/: [id].tsx
app/assets/: README.md
app/components/: NativeWindTest.tsx
app/components/ui/: .gitkeep  README.md  confidence-badge.tsx  conflict-card.tsx  engine-status.tsx  index.ts  landing-hero.tsx  loading-state.tsx  mode-selector.tsx  result-card.tsx  search-bar.tsx  source-list.tsx
app/hooks/: useResearch.ts
app/lib/: api.ts  store.ts  types.ts
backend/: .env.example  README.md  pyproject.toml
backend/src/parallax/: __init__.py  config.py
backend/src/parallax/agents/: __init__.py
backend/src/parallax/api/: main.py
backend/src/parallax/api/routes/: research.py
backend/src/parallax/engines/: __init__.py
backend/src/parallax/models/: __init__.py  claims.py  output.py  research.py
backend/src/parallax/services/: __init__.py
backend/tests/: __init__.py  conftest.py
